@@ -1,3 +1,9 @@
+2011-09-12  Andrew Cohen  <cohen@andy.bu.edu>
+
+	* gnus-group.el (gnus-group-list-limit-map, gnus-group-list-flush-map)
+	(gnus-group-list-plus-map): Allow limiting, flushing and plusing ticked
+	articles.
+
 2011-09-11  Chong Yidong  <cyd@stupidchicken.com>
 
 	* message.el (message-pop-to-buffer): Default to switch-to-buffer.
